# OpenStreetMapRender

./: .gitignore  CMakeLists.txt  GPSinput.txt  README.md  map (1).osm  map (3).osm  map.osm  pixel.osm
src/: draw_image.cpp  draw_image.h  main.cpp  model.cpp  model.h  render.cpp  render.h
